--- a/BattleShip.API/BattleShip.API.csproj
+++ b/BattleShip.API/BattleShip.API.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BattleShip.Models\BattleShip.Models.csproj" />
+    <ProjectReference Include="..\BattleShip.App\BattleShip.App.csproj" />
   </ItemGroup>
 
 </Project>
